# storysmith

./: .gitignore  LICENSE  main.py  pyproject.toml  shortstory_2025-06-19.jsonld
data/: scene-all.jsonld
data/characters/: john_watson.jsonld  mary_jane.jsonld  test01.jsonld
data/places/: baker_street.jsonld  odessa.jsonld  test01.jsonld  trincomalee.jsonld
data/scenes/: test01.jsonld
data/timepoints/: test01.jsonld  twentieth_of_march_1888.jsonld
metrics/: character_metrics.json  entity_metrics.json
stories/: shortstory_2025-06-19.jsonld
storysmith/: 0_shortSchema.py  1_extractor.py  2_deduplicate.py  3_scene_constructor.py  __init__.py  a_extract.py  b_deduplicate.py  c_analyze.py  config.py  context.jsonld  extractor.py
storysmith/characters/: dr_john_watson.jsonld  irene_adler.jsonld  john_watson.jsonld  mary_jane.jsonld  sherlock_holmes.jsonld
storysmith/places/: baker_street.jsonld  holland.jsonld  odessa.jsonld  trincomalee.jsonld
storysmith/scenes/: test01.jsonld
storysmith/timepoints/: the_twentieth_of_march_1888.jsonld  thursday.jsonld
