[project]
name = "storysmith"
version = "0.1.1"
description = "A storytelling toolkit"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "Kotaro Nishigori", email = "kotaro.nishigori@gmail.com"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/story-smith/storysmith"
Repository = "https://github.com/story-smith/storysmith"
Issues = "https://github.com/story-smith/storysmith/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
