[project]
name = "storysmith"
version = "0.1.1"
description = "A storytelling toolkit"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "Kotaro Nishigori", email = "kotaro.nishigori@gmail.com"}]
dependencies = [
    "fractional-indexing>=0.1.3",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.63",
    "langchain-openai>=0.3.19",
    "openai>=1.84.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/story-smith/storysmith"
Repository = "https://github.com/story-smith/storysmith"
Issues = "https://github.com/story-smith/storysmith/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
